--- a/development/assets/scss/_about.scss
+++ b/development/assets/scss/_about.scss
@@ -9,6 +9,9 @@
       @media (max-width: 1023px) {
         height: auto;
       }
+      @media (max-width: 768px) {
+        height: 300px !important;
+      }
 
     &.about-banner__imgmobile{
       img{
@@ -37,7 +40,7 @@
 
     @include respond-to(xl){
       left: 20%;
-      top: 15%;
+      
     }
     @include respond-to(md){
       left:0%;
@@ -284,7 +287,7 @@
 
   &.main-ourorigin__box--ml {
     margin-left: 17%;
-
+ 
     @include respond-to(md) {
       margin-left: 8%;
     }
@@ -326,6 +329,7 @@
     }
 
     @include respond-to(xs) {
+      line-height: 1.7; 
       @include font(18px, $medium);
     }
   }
