--- a/development/assets/scss/_about.scss
+++ b/development/assets/scss/_about.scss
@@ -10,7 +10,7 @@
         height: auto;
       }
       @media (max-width: 768px) {
-        height: 250px !important;
+        height: 300px !important;
       }
 
     &.about-banner__imgmobile{
@@ -29,6 +29,11 @@
 
   &.about-banner--full {
     height: 100vh;
+    .container{
+      @include respond-to(xl){
+        margin-top: 0px;
+      }
+    }
   }
 
   .container {
@@ -162,7 +167,7 @@
         text-transform: uppercase;
         // text-shadow: 0px 4px 11px #000000AC;
         @include respond-to(xl){
-          @include font(85px, $bold);
+          @include font(80px, $bold);
         }
 
 
@@ -377,7 +382,6 @@
     height: 100%;
   }
 }
-
 @media (max-width: 768px) {
   #poke-puntos{
     height: 100vh !important;
