--- a/development/assets/scss/_buttons.scss
+++ b/development/assets/scss/_buttons.scss
@@ -62,11 +62,6 @@ button {
   background: $white;
   transition: 0.3s ease-in-out;
   text-decoration: none;
-  // display: flex;
-  // justify-content: center;
-  // text-transform: uppercase;
-  // font-weight: $superBold;
-  // letter-spacing: 1.6px;
 
   &:hover {
     text-decoration: none;
@@ -76,6 +71,17 @@ button {
     -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
     box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
     transition: 0.3s ease-in-out;
+    cursor: pointer;
+  }
+  &.btn--filled--mobile{
+    @include respond-to(sm){
+      color:#fff;
+      background: #686868;
+    }
+    @include respond-to(xs){
+      color:#fff;
+      background: #686868;
+    }
   }
   &.btn-event{
     border-radius: 0px !important;
