--- a/development/assets/scss/_createpokebolw.scss
+++ b/development/assets/scss/_createpokebolw.scss
@@ -51,6 +51,35 @@
     color: $white;
     @include font(20px, $semibold);
   }
+  &:hover{
+    cursor: pointer;
+  }
+  button{
+    background-color: transparent;
+  }
+}
+
+.container__icons{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .main-createpoke__icon{
+    width: 20px;
+    height: 20px;
+    img{
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.main-create__boxtext{
+  p{
+    font-weight: 700;
+    color: #686868;
+  }
 }
 
 
@@ -59,6 +88,9 @@
   grid-template-columns: 1fr 1fr;
   padding: 30px 0;
   background-color: $white;
+  button{
+    background-color: transparent;
+  }
 }
 
 .main-createpoke__bodytext {
@@ -68,6 +100,7 @@
     text-align: center;
     text-transform: uppercase;
     @include font(20px, $bold);
+    color: #686868;
   }
 }
 
