--- a/development/assets/scss/_buttons.scss
+++ b/development/assets/scss/_buttons.scss
@@ -93,6 +93,14 @@ button {
     font-size: 20px;
     margin-top: 10px;
     padding: 5px;
+    @include respond-to(sm){
+      color: #fff;
+      background-color: #686868;
+    }
+    @include respond-to(xs){
+      color: #fff;
+      background-color: #686868;
+    }
   }
   &.btn--filled--buy {
     background-color: $past;
