--- a/development/assets/scss/_about.scss
+++ b/development/assets/scss/_about.scss
@@ -10,7 +10,7 @@
         height: auto;
       }
       @media (max-width: 768px) {
-        height: 300px;
+        height: 250px;
       }
 
     &.about-banner__imgmobile{
@@ -383,13 +383,12 @@
   }
 }
 @media (max-width: 768px) {
-  #poke-puntos{
-    height: 100vh !important;
-  }
   .page-eventos{
-    height: 60vh !important;
+    height: 50vh !important;
     text-align: end;
     text-shadow: 0 4px 4px #0000007a;
-
+    h2{
+      width: 95%;
+    }
   }
 }
