correcion texto arma tu bowl

--- a/development/assets/scss/main.scss
+++ b/development/assets/scss/main.scss
@@ -1371,6 +1371,9 @@ button:focus {
     justify-content: center;
   }
 }
+.btn__footer{
+  width: 120px;
+}
 
 .main-footer__redes {
   display: flex;
