--- a/development/assets/scss/_variables.scss
+++ b/development/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 // Medias querys
-$breakpoints: ('xs': "(min-width: 0px) and (max-width: 767px)",
+$breakpoints: ('xxs': "(min-width: 0px) and (max-width: 480px)",
+  'xs': "(min-width: 0px) and (max-width: 767px)",
   'sm': "(min-width: 768px) and (max-width: 991px)",
   'md': "(min-width: 992px) and (max-width: 1199px)",
   'lg': "(min-width: 1200px) and (max-width: 1600px)",
@@ -123,6 +124,7 @@ $recutex: #ebe5e2;
 $recutex2: #d9c8c0;
 $green:#94b99e;
 $line: rgba(112, 112, 112, 0.35);
+$fep: #FC3D2D;
 
 $past: #f75d63;
 // Slick
