--- a/development/assets/scss/_work.scss
+++ b/development/assets/scss/_work.scss
@@ -7,6 +7,29 @@
   padding: 130px 0 50px 0;
   & .main__form{
     margin-bottom: 40px;
+    h1{
+      color: $text;
+      @include font(35px, $medium);
+      letter-spacing: 2.1px;
+      font-weight: 900;
+      text-align: center;
+      text-transform: uppercase;
+
+      @include respond-to(md) {
+        @include font(30px, $medium);
+        font-weight: 900;
+      }
+
+      @include respond-to(sm) {
+        @include font(30px, $medium);
+        font-weight: 900;
+      }
+
+      @include respond-to(xs) {
+        @include font(25px, $medium);
+        font-weight: 900;
+      }
+    }
   }
   & .politica strong {
     text-decoration: underline;
