--- a/development/assets/scss/_variables.scss
+++ b/development/assets/scss/_variables.scss
@@ -106,6 +106,7 @@ $superBold: 900;
 // General
 $white: #fff;
 $black: #000;
+$agregar: #3b3b3b;
 $contact: #161743;
 $text: #686868;
 $bcMision: #4a23de;
