--- a/development/assets/scss/_entries.scss
+++ b/development/assets/scss/_entries.scss
@@ -1,11 +1,12 @@
 /**** ENTRIES ****/
-.js-hiddenMenu{display:none;}
+.js-hiddenMenu {
+  display: none;
+}
 .main-entries {
   padding: 5px 0;
 
-
-  .container{
-    @include respond-to(sm){
+  .container {
+    @include respond-to(sm) {
       padding: 0;
     }
   }
@@ -71,8 +72,10 @@
   &.nav-item--tabs {
     padding: 0;
     margin-bottom: 15px;
+    @include respond-to(xs) {
+      padding: 0 5px;
+    }
   }
-
 }
 
 .nav-pills {
@@ -90,7 +93,7 @@
     text-transform: uppercase;
     font-family: $Ostrich;
     border: 4px solid transparent;
-    color: #B4B4B4;
+    color: #b4b4b4;
     padding: 0 10px;
 
     @include respond-to(sm) {
@@ -115,9 +118,10 @@
   background-color: transparent;
   border: 4px solid #707070;
   border-radius: 7px;
+  @include respond-to(xs) {
+    padding: 0 5px;
+  }
 }
-
-
 
 /**** POKE BOWLS****/
 
@@ -136,12 +140,12 @@
   }
 }
 
-@media (max-width: 768px) and (min-width: 0px){
-  .mb-3, .my-3 {
-    margin-bottom: 0rem!important;
+@media (max-width: 768px) and (min-width: 0px) {
+  .mb-3,
+  .my-3 {
+    margin-bottom: 0rem !important;
   }
-  .btn--large{
-      padding: 0 8px;
-  }  
+  .btn--large {
+    padding: 0 8px;
+  }
 }
-
